book/tests/snapshots/snapshot__@language-features__dates-and-times-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive age_at_year_end = (@2022-12-31 - dob)\n"
input_file: book/tests/prql/language-features/dates-and-times-0.prql
---
SELECT
  *,
  DATE '2022-12-31' - dob AS age_at_year_end
FROM
  employees

