book/tests/snapshots/snapshot__@language-features__dates-and-times-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from projects\nderive first_check_in = start + 10days\n"
input_file: book/tests/prql/language-features/dates-and-times-3.prql
---
SELECT
  *,
  start + INTERVAL 10 DAY AS first_check_in
FROM
  projects

