book/tests/snapshots/snapshot__@language-features__distinct-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect department\ngroup department (\n  take 1\n)\n"
input_file: book/tests/prql/language-features/distinct-0.prql
---
SELECT
  DISTINCT department
FROM
  employees

