book/tests/snapshots/snapshot__@language-features__distinct-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect department\ngroup department (take 1)\n"
input_file: book/tests/prql/language-features/distinct-1.prql
---
SELECT
  DISTINCT department
FROM
  employees

