book/tests/snapshots/snapshot__@language-features__f-strings-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from web\nselect url = f\"http{tls}://www.{domain}.{tld}/{page}\"\n"
input_file: book/tests/prql/language-features/f-strings-1.prql
---
SELECT
  CONCAT(
    'http',
    tls,
    '://www.',
    domain,
    '.',
    tld,
    '/',
    page
  ) AS url
FROM
  web

