book/tests/snapshots/snapshot__@language-features__null-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter first_name == null\nfilter null != last_name\n"
input_file: book/tests/prql/language-features/null-0.prql
---
SELECT
  *
FROM
  employees
WHERE
  first_name IS NULL
  AND last_name IS NOT NULL

